force-app/main/default/objects/Standing_Order_Line_Item__c/Standing_Order_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Standing Order Line Item</label>
    <nameField>
        <label>Standing Order Line Item No.</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Standing Order Line Item</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>