force-app/main/default/objects/Standing_Order_Line_Item__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If the record is in Accpac, it is considered Active.</description>
    <inlineHelpText>If the record is in Accpac, it is considered Active.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>