force-app/main/default/objects/Standing_Order_Line_Item__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <length>70</length>
    <type>Text</type>
</CustomField>