force-app/main/default/objects/Standing_Order_Line_Item__c/fields/Frequency_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Frequency_Picklist__c</fullName>
    <label>Frequency Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One-Time</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>14 Days</fullName>
            </value>
            <value>
                <fullName>Twice Monthly</fullName>
            </value>
            <value>
                <fullName>28 Days</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Bi-Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>120 Days</fullName>
            </value>
            <value>
                <fullName>Semi-Annually</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
            <value>
                <fullName>Fixed Weekly</fullName>
            </value>
            <value>
                <fullName>56 Days</fullName>
            </value>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>2X Per Week</fullName>
            </value>
            <value>
                <fullName>3X Per Week</fullName>
            </value>
            <value>
                <fullName>5X Per Week</fullName>
            </value>
            <value>
                <fullName>6X Per Week</fullName>
            </value>
            <value>
                <fullName>2X Per Year</fullName>
            </value>
            <value>
                <fullName>42 Days</fullName>
            </value>
            <value>
                <fullName>84 Days</fullName>
            </value>
            <value>
                <fullName>112 Days</fullName>
            </value>
            <value>
                <fullName>168 Days</fullName>
            </value>
            <value>
                <fullName>182 Days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>