force-app/main/default/objects/Standing_Order_Line_Item__c/fields/Monthly_Price_Per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Price_Per_Unit__c</fullName>
    <formula>(CASE(Frequency_Picklist__c, 
&quot;112 Days&quot;, (Service_Price_Per_Visit__c*3)/12, 
&quot;120 Days&quot;, (Service_Price_Per_Visit__c*3)/12, 
&quot;14 Days&quot;, (Service_Price_Per_Visit__c*26)/12, 
&quot;168 Days&quot;, (Service_Price_Per_Visit__c*2)/12, 
&quot;182 Days&quot;, (Service_Price_Per_Visit__c*2)/12, 
&quot;28 Days&quot;, (Service_Price_Per_Visit__c*13)/12, 
&quot;2X Per Week&quot;, (Service_Price_Per_Visit__c*104)/12, 
&quot;2X Per Year&quot;, (Service_Price_Per_Visit__c*2)/12, 
&quot;3X Per Week&quot;, (Service_Price_Per_Visit__c*156)/12, 
&quot;42 Days&quot;, (Service_Price_Per_Visit__c*9)/12, 
&quot;56 Days&quot;, (Service_Price_Per_Visit__c*6.5)/12, 
&quot;5X Per Week&quot;, (Service_Price_Per_Visit__c*260)/12, 
&quot;6X Per Week&quot;, (Service_Price_Per_Visit__c*312)/12, 
&quot;84 Days&quot;, (Service_Price_Per_Visit__c*4)/12, 
&quot;Annually&quot;, (Service_Price_Per_Visit__c*1)/12, 
&quot;Bi-Monthly&quot;, (Service_Price_Per_Visit__c*6)/12, 
&quot;Daily&quot;, (Service_Price_Per_Visit__c*364)/12, 
&quot;Fixed Weekly&quot;, (Service_Price_Per_Visit__c*52)/12, 
&quot;Monthly&quot;, (Service_Price_Per_Visit__c*12)/12, 
&quot;One-Time&quot;, (Service_Price_Per_Visit__c*1)/12, 
&quot;Quarterly&quot;, (Service_Price_Per_Visit__c*4)/12, 
&quot;Semi-Annually&quot;, (Service_Price_Per_Visit__c*2)/12, 
&quot;Twice Monthly&quot;, (Service_Price_Per_Visit__c*24)/12, 
&quot;Weekly&quot;, (Service_Price_Per_Visit__c*52)/12, 0)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Price Per Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>