force-app/main/default/objects/Standing_Order_Line_Item__c/fields/Service_Price_Per_Visit__c.field-meta.xml
<CustomField>
    <fullName>Service_Price_Per_Visit__c</fullName>
    <description>This value is used in Darci&apos;s integration. It represents the customer&apos;s price everytime we service this product. The formula populating this field is the customer&apos;standing order price multiplied by their billing frequency divided by the number of services in a year.</description>
    <label>Service Price Per Visit</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>