force-app/main/default/objects/Standing_Order_Line_Item__c/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <description>A sub category of the service line of business</description>
    <label>Service Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>