force-app/main/default/objects/Standing_Order_Line_Item__c/fields/Standing_Order__c.field-meta.xml
<CustomField>
    <fullName>Standing_Order__c</fullName>
    <label>Standing Order</label>
    <referenceTo>Standing_Order__c</referenceTo>
    <relationshipLabel>Standing Order Line Item</relationshipLabel>
    <relationshipName>Standing_Order_Line_Item</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>