force-app/main/default/objects/Standing_Order_Line_Item__c/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <label>Total</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>