force-app/main/default/objects/Standing_Order_Line_Item__c/fields/Unit_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Unit_Invoice__c</fullName>
    <label>Unit $ Invoice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>