force-app/main/default/objects/Standing_Order_Line_Item__c/fields/Unit_Month__c.field-meta.xml
<CustomField>
    <fullName>Unit_Month__c</fullName>
    <label>Unit $ Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>