force-app/main/default/objects/Standing_Order_Line_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Item_Number__c</columns>
    <columns>Active__c</columns>
    <columns>Upsert_Date__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>