force-app/main/default/objects/Standing_Order_Line_Item__c/listViews/Deleted_Standing_Order_Line_Items.listView-meta.xml
<ListView>
    <fullName>Deleted_Standing_Order_Line_Items</fullName>
    <columns>NAME</columns>
    <columns>Item_Number__c</columns>
    <columns>Description__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>lessThan</operation>
        <value>THIS_WEEK</value>
    </filters>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Deleted Standing Order Line Items</label>
    <sharedTo>
        <role>CEO</role>
    </sharedTo>
</ListView>